tests/ui/async-await/return-type-notation/ty-or-ct-params.stderr
warning: the feature `return_type_notation` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/ty-or-ct-params.rs:3:31
   |
LL | #![feature(async_fn_in_trait, return_type_notation)]
   |                               ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #109417 <https://github.com/rust-lang/rust/issues/109417> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: return type notation is not allowed for functions that have type parameters
  --> $DIR/ty-or-ct-params.rs:14:12
   |
LL |     async fn bar<T>() {}
   |                  - type parameter declared here
...
LL |     T: Foo<bar(): Send, baz(): Send>,
   |            ^^^^^^^^^^^

error: return type notation is not allowed for functions that have const parameters
  --> $DIR/ty-or-ct-params.rs:14:25
   |
LL |     async fn baz<const N: usize>() {}
   |                  -------------- const parameter declared here
...
LL |     T: Foo<bar(): Send, baz(): Send>,
   |                         ^^^^^^^^^^^

error: aborting due to 2 previous errors; 1 warning emitted

